test/conformance/chainsaw/mutate/clusterpolicy/cornercases/cascading-mutation/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: database-protection
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
