test/conformance/chainsaw/mutate/clusterpolicy/cornercases/cascading-mutation/resource-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    backup-needed: "yes"
    type: database
  name: cassandra
  namespace: default
spec:
  containers:
  - image: cassandra:latest
    imagePullPolicy: Always
    name: cassandra
