test/conformance/chainsaw/mutate/clusterpolicy/cornercases/cascading-mutation/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cassandra
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: cassandra:latest
    imagePullPolicy: Always
    name: cassandra
